--- a/selene-modules/structures/build.gradle
+++ b/selene-modules/structures/build.gradle
@@ -16,11 +16,11 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-parent'))
-    compileOnly(project(':selene-persistence-configurate'))
+    compileOnly project(':selene-parent')
+    compileOnly project(':selene-persistence-configurate')
 
-    testCompile(project(':selene-parent'))
-    testCompile(project(':selene-persistence'))
-    testCompile(project(':selene-persistence-configurate'))
-    testCompile(project(':selene-persistence-xstream'))
+    testCompile project(':selene-parent')
+    testCompile project(':selene-persistence')
+    testCompile project(':selene-persistence-configurate')
+    testCompile project(':selene-persistence-xstream')
 }
