--- a/settings.gradle
+++ b/settings.gradle
@@ -19,24 +19,18 @@ rootProject.name = 'Selene'
 
 gradle.startParameter.continueOnFailure = true
 
-rootDir.listFiles().each {
-    if (it.directory && it.name.startsWith('selene-') && new File(it, 'build.gradle').exists()) {
-        include(":${it.name}")
-    }
-}
-
-new File(rootDir, 'selene-modules').listFiles().each {
-    if (it.directory && new File(it, 'build.gradle').exists()) {
-        include(":selene-modules:${it.name}")
-    }
-}
-
-new File(rootDir, 'selene-minecraft-modules').listFiles().each {
-    if (it.directory && new File(it, 'build.gradle').exists()) {
-        include(":selene-minecraft-modules:${it.name}")
-    }
-}
+includeAll(rootDir, '')
+includeAll(new File(rootDir, 'selene-modules'), ':selene-modules')
+includeAll(new File(rootDir, 'selene-minecraft-modules'), ':selene-minecraft-modules')
 
 include 'selene-sponge-7'
 include 'modules'
 include 'examples'
+
+def includeAll(File dir, String prefix) {
+    dir.listFiles().each {
+        if (it.directory && new File(it, 'build.gradle').exists()) {
+            include(prefix + ":${it.name}")
+        }
+    }
+}
