--- a/selene-di/build.gradle
+++ b/selene-di/build.gradle
@@ -16,8 +16,8 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-core'))
-    compileOnly(project(':selene-util'))
+    compileOnly project(':selene-core')
+    compileOnly project(':selene-util')
     // Ensure both Guice and AssistedInject are on equal versions, mismatches will cause issues
     compile "com.google.inject:guice:$guiceVersion"
     compile "com.google.inject.extensions:guice-assistedinject:$guiceVersion"
