--- a/selene-events/build.gradle
+++ b/selene-events/build.gradle
@@ -16,8 +16,8 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-parent'))
+    compileOnly project(':selene-parent')
 
-    compileOnly(project(':selene-modules'))
-    compileOnly(project(':selene-tasks'))
+    compileOnly project(':selene-modules')
+    compileOnly project(':selene-tasks')
 }
