--- a/selene-keys/build.gradle
+++ b/selene-keys/build.gradle
@@ -16,13 +16,13 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-parent'))
-    compileOnly(project(':selene-i18n'))
-    compileOnly(project(':selene-modules'))
-    compileOnly(project(':selene-exceptions'))
+    compileOnly project(':selene-parent')
+    compileOnly project(':selene-i18n')
+    compileOnly project(':selene-modules')
+    compileOnly project(':selene-exceptions')
 
-    testImplementation(project(':selene-parent'))
-    testImplementation(project(':selene-i18n'))
-    testImplementation(project(':selene-modules'))
-    testImplementation(project(':selene-exceptions'))
+    testImplementation project(':selene-parent')
+    testImplementation project(':selene-i18n')
+    testImplementation project(':selene-modules')
+    testImplementation project(':selene-exceptions')
 }
