--- a/selene-minecraft-modules/oldplots/build.gradle
+++ b/selene-minecraft-modules/oldplots/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    compileOnly(project(':selene-modules:database'))
-    compileOnly(project(':selene-modules:structures'))
+    compileOnly project(':selene-modules:database')
+    compileOnly project(':selene-modules:structures')
 }
