--- a/selene-minecraft-modules/playeractions/build.gradle
+++ b/selene-minecraft-modules/playeractions/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    compileOnly(project(':selene-minecraft-modules:plots'))
+    compileOnly project(':selene-minecraft-modules:plots')
 }
