--- a/selene-persistence/build.gradle
+++ b/selene-persistence/build.gradle
@@ -16,6 +16,6 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-parent'))
-    compileOnly(project(':selene-modules'))
+    compileOnly project(':selene-parent')
+    compileOnly project(':selene-modules')
 }
