--- a/selene-util/build.gradle
+++ b/selene-util/build.gradle
@@ -16,8 +16,8 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-core'))
+    compileOnly project(':selene-core')
     compile "org.reflections:reflections:$reflectionsVersion"
 
-    testImplementation(project(':selene-core'))
+    testImplementation project(':selene-core')
 }
