--- a/selene-web/build.gradle
+++ b/selene-web/build.gradle
@@ -16,8 +16,8 @@
  */
 
 dependencies {
-    compileOnly(project(':selene-core'))
-    compileOnly(project(':selene-exceptions'))
+    compileOnly project(':selene-core')
+    compileOnly project(':selene-exceptions')
 
     compile "com.stanfy:gson-xml-java:$gsonXmlVersion"
 }
