Remove dependency on modules (discord)

--- a/selene-discord/build.gradle
+++ b/selene-discord/build.gradle
@@ -1,9 +1,8 @@
 dependencies {
     compileOnly project(':selene-parent')
+    compileOnly project(':selene-bootstrap')
     compileOnly project(':selene-i18n')
-    compileOnly project(':selene-persistence')
     compileOnly project(':selene-events')
-    compileOnly project(':selene-modules')
 
     compile 'com.github.ygimenez:Pagination-Utils:2.1.1'
     compile("net.dv8tion:JDA:$jdaVersion") {
