--- a/selene-i18n/build.gradle
+++ b/selene-i18n/build.gradle
@@ -17,7 +17,6 @@
 
 dependencies {
     compileOnly project(':selene-parent')
-
-    compileOnly project(':selene-modules')
-    compileOnly project(':selene-persistence')
+    // Compile as Text extends PersistentCapable
+    compile project(':selene-persistence')
 }
