Remove module dependency from persistence, replacing with PersistentOwner

--- a/selene-i18n/build.gradle
+++ b/selene-i18n/build.gradle
@@ -17,6 +17,7 @@
 
 dependencies {
     compileOnly project(':selene-parent')
+    compileOnly project(':selene-bootstrap')
     // Compile as Text extends PersistentCapable
     compile project(':selene-persistence')
 }
