Move TypedOwner to domain for future re-use

--- a/selene-persistence-xstream/build.gradle
+++ b/selene-persistence-xstream/build.gradle
@@ -17,6 +17,7 @@
 
 dependencies {
     compileOnly project(':selene-parent')
+    compileOnly project(':selene-bootstrap')
     compileOnly project(':selene-persistence')
 
     compile "com.thoughtworks.xstream:xstream:$xstreamVersion"
