Remove module specific dependencies from events

--- a/selene-events/build.gradle
+++ b/selene-events/build.gradle
@@ -17,7 +17,6 @@
 
 dependencies {
     compileOnly project(':selene-parent')
-
-    compileOnly project(':selene-modules')
+    compileOnly project(':selene-bootstrap')
     compileOnly project(':selene-tasks')
 }
