--- a/selene-sponge-7/build.gradle
+++ b/selene-sponge-7/build.gradle
@@ -63,6 +63,8 @@ repositories {
     }
 }
 
+def ignoreProjects = ['examples', 'selene-parent', 'selene-module-parent', 'selene-sponge-7', 'selene-nms-1.12']
+
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraftForge112}"
     new File(parent.rootDir, 'selene-modules').listFiles().each {
@@ -78,13 +80,12 @@ dependencies {
         }
     }
 
-    shadow project(':selene-parent')
-    shadow project(':selene-tasks')
-    shadow project(':selene-web')
-    shadow project(':selene-discord')
-    shadow project(':selene-persistence-configurate')
-    shadow project(':selene-persistence-xstream')
-    shadow project(':selene-minecraft-server')
+    parent.rootDir.listFiles().each {
+        if ((!ignoreProjects.contains(it.name)) && it.directory && new File(it, 'build.gradle').exists()) {
+            shadow project(":${it.name}")
+            testImplementation project(":${it.name}")
+        }
+    }
 
     shadow(project(':selene-nms-1.12')) {
         exclude group: 'net.minecraftforge', module: 'forge'
@@ -109,11 +110,6 @@ dependencies {
     testImplementation project(':selene-modules')
     testImplementation(project(':selene-nms-1.12')) {
         exclude group: 'net.minecraftforge', module: 'forge'
-    }
-
-    if (findProject(':darwin') != null) {
-        compile project(':darwin')
-        testImplementation project(':darwin')
     }
 
     compileOnly files('libs/PacketGate-0.1.2.jar')
