Provider slf4j at test

--- a/build.gradle
+++ b/build.gradle
@@ -113,6 +113,7 @@ allprojects {
 
             testImplementation "com.google.inject:guice:$guiceVersion"
             testImplementation "com.google.guava:guava:$guavaVersion"
+            testImplementation "org.slf4j:slf4j-api:$slf4jVersion"
         }
 
         test {
