Fix Guice dependency leaking

--- a/selene-exceptions/build.gradle
+++ b/selene-exceptions/build.gradle
@@ -17,5 +17,7 @@
 
 dependencies {
     compileOnly project(':selene-core')
-    compileOnly project(':selene-di')
+    compile(project(':selene-di')){
+        exclude module: 'guice'
+    }
 }
