--- a/selene-web/build.gradle
+++ b/selene-web/build.gradle
@@ -17,7 +17,9 @@
 
 dependencies {
     compileOnly project(':selene-core')
-    compileOnly project(':selene-di')
+    compileOnly(project(':selene-di')){
+        exclude module: 'guice'
+    }
     compileOnly project(':selene-exceptions')
 
     compile "com.stanfy:gson-xml-java:$gsonXmlVersion"
