Revert "Remove unavailable CI maven repository"
This reverts commit 94a00cc76502ec5d84eb7ee77903d0f1c94a2df1.

--- a/selene-sponge-7/build.gradle
+++ b/selene-sponge-7/build.gradle
@@ -50,6 +50,10 @@ repositories {
         url 'https://repo.drnaylor.co.uk/artifactory/list/minecraft'
     }
     maven {
+        name 'fawe'
+        url 'https://ci.athion.net/job/FastAsyncWorldEdit/ws/mvn/'
+    }
+    maven {
         name 'sk89q'
         url 'https://maven.enginehub.org/repo/'
     }
