Initial configuration draft

--- a/gradle.properties
+++ b/gradle.properties
@@ -43,6 +43,7 @@ woodstoxVersion=6.2.3
 xmlPullParserVersion=1.1.4c
 kxmlVersion=2.3.0
 gsonXmlVersion=0.1.7
+snakeYamlVersion=1.28
 ## Sponge API7
 ### Platforms
 spongeApi7Version=7.3.0
