--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,7 @@ allprojects {
             testImplementation "com.google.inject:guice:$guiceVersion"
             testImplementation "com.google.guava:guava:$guavaVersion"
             testImplementation "org.slf4j:slf4j-api:$slf4jVersion"
+            testImplementation "org.slf4j:slf4j-simple:$slf4jVersion"
         }
 
         test {
