--- a/selene-keys/build.gradle
+++ b/selene-keys/build.gradle
@@ -15,13 +15,13 @@
  * along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
+apply from: "$rootDir/parent.gradle"
+
 dependencies {
-    compileOnly project(':selene-parent')
     compileOnly project(':selene-bootstrap')
     compileOnly project(':selene-i18n')
     compileOnly project(':selene-exceptions')
 
-    testImplementation project(':selene-parent')
     testImplementation project(':selene-i18n')
     testImplementation project(':selene-exceptions')
 }
