--- a/parent.gradle
+++ b/parent.gradle
@@ -16,21 +16,17 @@
  */
 
 dependencies {
-    compile project(':selene-parent')
-    compile project(':selene-bootstrap')
-
-    // Provide access to i18n for target communication
-    compile project(':selene-i18n')
-
-    // Provide access to persistence and entity models
-    compile project(':selene-persistence')
-    compile project(':selene-config')
-
-    // Provide access to event and command listeners, which
-    // cover 50% of the module use-cases
-    compile project(':selene-events')
-    compile project(':selene-commands')
-
-    // Provide access to exception handlers
+    compile project(':selene-core')
+    compile project(':selene-util')
+    compile(project(':selene-di')){
+        exclude module: 'guice'
+    }
     compile project(':selene-exceptions')
+
+    testCompile project(':selene-core')
+    testCompile project(':selene-util')
+    testCompile(project(':selene-di')){
+        exclude module: 'guice'
+    }
+    testCompile project(':selene-exceptions')
 }
