--- a/selene-bootstrap/build.gradle
+++ b/selene-bootstrap/build.gradle
@@ -15,6 +15,4 @@
  * along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
-dependencies {
-    compileOnly project(':selene-parent')
-}
+apply from: "$rootDir/parent.gradle"
