--- a/selene-discord/build.gradle
+++ b/selene-discord/build.gradle
@@ -1,5 +1,6 @@
+apply from: "$rootDir/parent.gradle"
+
 dependencies {
-    compileOnly project(':selene-parent')
     compileOnly project(':selene-bootstrap')
     compileOnly project(':selene-i18n')
     compileOnly project(':selene-events')
