--- a/selene-events/build.gradle
+++ b/selene-events/build.gradle
@@ -15,8 +15,9 @@
  * along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
+apply from: "$rootDir/parent.gradle"
+
 dependencies {
-    compileOnly project(':selene-parent')
     compileOnly project(':selene-bootstrap')
     compileOnly project(':selene-tasks')
 }
