--- a/selene-tasks/build.gradle
+++ b/selene-tasks/build.gradle
@@ -15,7 +15,4 @@
  * along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
-dependencies {
-    compileOnly project(':selene-parent')
-    testImplementation project(':selene-parent')
-}
+apply from: "$rootDir/parent.gradle"
