--- a/selene-sponge-7/build.gradle
+++ b/selene-sponge-7/build.gradle
@@ -22,17 +22,20 @@ buildscript {
         maven { url = 'https://files.minecraftforge.net/maven' }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.3'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
 
 plugins {
     id 'java'
+    id 'java-test-fixtures'
     id 'org.spongepowered.plugin' version '0.9.0'
+    id 'net.minecrell.vanillagradle.server' version '2.2-6'
     id 'de.undercouch.download' version '4.1.1'
 }
 
-apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 archivesBaseName = 'selene-sponge-7'
 group project.pluginGroup
@@ -41,7 +44,12 @@ sponge.plugin.id = pluginId
 def date = LocalDate.now().toString()
 
 minecraft {
-    mappings channel: 'snapshot', version: "${minecraftMappings112}"
+    version = '1.12.2'
+    mappings = 'snapshot_20180808'
+    //mappings("snapshot","20180814-1.12") FG 3
+    useDepAts = true
+
+    //runDir = 'run'
 }
 
 repositories {
@@ -66,8 +74,6 @@ repositories {
 def ignoreProjects = ['examples', 'selene-parent', 'selene-service-parent', 'selene-sponge-7', 'selene-nms-1.12']
 
 dependencies {
-    minecraft "net.minecraftforge:forge:${minecraftForge112}"
-
     new File(parent.rootDir, 'selene-minecraft').listFiles().each {
         if (it.directory && new File(it, 'build.gradle').exists()) {
             shadow project(":selene-minecraft:${it.name}")
@@ -90,7 +96,7 @@ dependencies {
     compileOnly("org.spongepowered:spongeapi:$spongeApi7Version") {
         exclude group: "org.spongepowered", module: "configurate**"
     }
-    compileOnly("org.spongepowered:spongecommon:$spongeCommon7Version") {
+    compileOnly("org.spongepowered:spongevanilla:$spongeCommon7Version") {
         exclude group: "org.spongepowered", module: "configurate**"
     }
     compileOnly "com.github.Eufranio:MagiBridge:$magiBridgeVersion"
@@ -116,8 +122,16 @@ dependencies {
     testImplementation "com.sk89q.worldedit:worldedit-core:$worldEditCoreVersion"
 }
 
+tasks.build {
+    dependsOn tasks.shadowJar
+}
+
 shadowJar {
     configurations = [project.configurations.shadow]
+    relocate 'com.fasterxml.jackson', 'org.dockbox.selene.internal.jackson'
+    relocate 'org.apache.commons', 'org.dockbox.selene.internal.apache.commons'
+    relocate 'org.spongepowered.configurate', 'org.dockbox.selene.internal.configurate'
+    relocate 'org.yaml.snakeyaml', 'org.dockbox.selene.internal.snakeyaml'
 }
 
 task downloadServerCustom(type: Download) {
