--- a/selene-keys/build.gradle
+++ b/selene-keys/build.gradle
@@ -18,10 +18,7 @@
 apply from: "$rootDir/parent.gradle"
 
 dependencies {
-    compileOnly project(':selene-bootstrap')
-    compileOnly project(':selene-i18n')
-    compileOnly project(':selene-exceptions')
-
-    testImplementation project(':selene-i18n')
-    testImplementation project(':selene-exceptions')
+    include project(':selene-bootstrap')
+    include project(':selene-i18n')
+    include project(':selene-exceptions')
 }
