--- a/selene-sponge-7/build.gradle
+++ b/selene-sponge-7/build.gradle
@@ -23,18 +23,19 @@ buildscript {
     }
     dependencies {
         classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.3'
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
     }
 }
 
 plugins {
+    id 'base'
     id 'java'
     id 'java-test-fixtures'
     id 'org.spongepowered.plugin' version '0.9.0'
-    id 'net.minecrell.vanillagradle.server' version '2.2-6'
     id 'de.undercouch.download' version '4.1.1'
 }
 
+apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 archivesBaseName = 'selene-sponge-7'
@@ -44,12 +45,7 @@ sponge.plugin.id = pluginId
 def date = LocalDate.now().toString()
 
 minecraft {
-    version = '1.12.2'
-    mappings = 'snapshot_20180808'
-    //mappings("snapshot","20180814-1.12") FG 3
-    useDepAts = true
-
-    //runDir = 'run'
+    mappings channel: 'snapshot', version: "${minecraftMappings112}"
 }
 
 repositories {
@@ -73,18 +69,24 @@ repositories {
 
 def ignoreProjects = ['examples', 'selene-parent', 'selene-service-parent', 'selene-sponge-7', 'selene-nms-1.12']
 
+configurations {
+    includeShadow
+    include.extendsFrom(includeShadow)
+    shadow.extendsFrom(includeShadow)
+}
+
 dependencies {
+    minecraft "net.minecraftforge:forge:${minecraftForge112}"
+
     new File(parent.rootDir, 'selene-minecraft').listFiles().each {
         if (it.directory && new File(it, 'build.gradle').exists()) {
-            shadow project(":selene-minecraft:${it.name}")
-            testImplementation project(":selene-minecraft:${it.name}")
+            includeShadow project(":selene-minecraft:${it.name}")
         }
     }
 
     parent.rootDir.listFiles().each {
         if ((!ignoreProjects.contains(it.name)) && it.directory && new File(it, 'build.gradle').exists()) {
-            shadow project(":${it.name}")
-            testImplementation project(":${it.name}")
+            includeShadow project(":${it.name}")
         }
     }
 
@@ -92,34 +94,26 @@ dependencies {
         exclude group: 'net.minecraftforge', module: 'forge'
     }
 
-    compileOnly "me.lucko.luckperms:luckperms-api:$luckPermsVersion"
-    compileOnly("org.spongepowered:spongeapi:$spongeApi7Version") {
+    include "me.lucko.luckperms:luckperms-api:$luckPermsVersion"
+    include("org.spongepowered:spongeapi:$spongeApi7Version") {
         exclude group: "org.spongepowered", module: "configurate**"
     }
-    compileOnly("org.spongepowered:spongevanilla:$spongeCommon7Version") {
+    include("org.spongepowered:spongevanilla:$spongeCommon7Version") {
         exclude group: "org.spongepowered", module: "configurate**"
     }
-    compileOnly "com.github.Eufranio:MagiBridge:$magiBridgeVersion"
-    compileOnly "com.github.MultiChat:Development:$multiChatVersion"
-    compileOnly "com.github.flash-labs:FlashLibs:$flashLibsVersion"
-    compileOnly "com.sk89q.worldedit:worldedit-sponge:$worldEditSpongeVersion"
-    compileOnly "io.github.NucleusPowered:Nucleus:$nucleusApiVersion"
+    include "com.github.Eufranio:MagiBridge:$magiBridgeVersion"
+    include "com.github.MultiChat:Development:$multiChatVersion"
+    include "com.github.flash-labs:FlashLibs:$flashLibsVersion"
+    include "com.sk89q.worldedit:worldedit-sponge:$worldEditSpongeVersion"
+    include "io.github.NucleusPowered:Nucleus:$nucleusApiVersion"
 
-    compileOnly 'io.netty:netty-all:4.1.24.Final'
+    include 'io.netty:netty-all:4.1.24.Final'
 
-    testImplementation(project(':selene-nms-1.12')) {
-        exclude group: 'net.minecraftforge', module: 'forge'
-    }
+    include files('libs/PacketGate-0.1.2.jar')
+    include files('libs/PlotSquared-modified-latest.jar')
 
-    compileOnly files('libs/PacketGate-0.1.2.jar')
-    compileOnly files('libs/PlotSquared-modified-latest.jar')
-
-    // Required plugins for all platforms
-    compileOnly "com.boydti:fawe-api:$faweVersion"
-    compileOnly "com.sk89q.worldedit:worldedit-core:$worldEditCoreVersion"
-
-    testImplementation "com.boydti:fawe-api:$faweVersion"
-    testImplementation "com.sk89q.worldedit:worldedit-core:$worldEditCoreVersion"
+    include "com.boydti:fawe-api:$faweVersion"
+    include "com.sk89q.worldedit:worldedit-core:$worldEditCoreVersion"
 }
 
 tasks.build {
