--- a/.github/workflows/javadoc-verify.yml
+++ b/.github/workflows/javadoc-verify.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout submodules
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.SELENE_AT }}
+          token: ${{ secrets.HARTSHORN_AT }}
           submodules: recursive
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
