--- a/hartshorn-sponge-8/build.gradle
+++ b/hartshorn-sponge-8/build.gradle
@@ -1,3 +1,5 @@
+import org.spongepowered.gradle.vanilla.repository.MinecraftPlatform
+
 import java.time.LocalDate
 
 /*
@@ -18,29 +20,28 @@ import java.time.LocalDate
  */
 
 buildscript {
-    repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
-    }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.3'
     }
 }
 
 plugins {
     id 'java'
     id 'org.spongepowered.plugin' version '0.9.0'
+    id 'org.spongepowered.gradle.vanilla' version "0.2"
 }
 
-apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'com.github.johnrengelman.shadow'
 
-archivesBaseName = 'selene-sponge-api8'
+archivesBaseName = 'hartshorn-sponge-api8'
 group = project.pluginGroup
-description = 'Sponge API8.x implementation for Selene'
+description = 'Sponge API8.x implementation for Hartshorn'
 sponge.plugin.id = pluginId
 def date = LocalDate.now().toString()
 
 minecraft {
-    mappings channel: 'snapshot', version: "${minecraftMappings116}"
+    version("1.16.5")
+    platform(MinecraftPlatform.SERVER)
 }
 
 repositories {
@@ -48,32 +49,28 @@ repositories {
     maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
 }
 
+def ignoreProjects = ['examples', 'hartshorn-parent', 'hartshorn-service-parent', 'hartshorn-sponge-7', 'hartshorn-nms-1.12']
+
+configurations {
+    includeShadow
+    include.extendsFrom(includeShadow)
+    shadow.extendsFrom(includeShadow)
+}
+
 dependencies {
-    minecraft "net.minecraftforge:forge:${minecraftForge116}"
-    shadow project(':selene-core')
-    shadow(project(':selene-common')) {
-        exclude group: "org.spongepowered", module: "configurate**"
-    }
-    new File(parent.rootDir, 'modules').listFiles().each {
+    new File(parent.rootDir, 'hartshorn-minecraft').listFiles().each {
         if (it.directory && new File(it, 'build.gradle').exists()) {
-            shadow(project(":modules:${it.name}"))
-            testCompileOnly(project(":modules:${it.name}"))
+            includeShadow project(":hartshorn-minecraft:${it.name}")
         }
     }
-    shadow project(':modules')
-    shadow(project(':selene-nms-1.12')) {
-        exclude group: 'net.minecraftforge', module: 'forge'
-    }
-    implementation "org.spongepowered:spongeapi:$spongeApi8Version"
 
-    testCompileOnly project(':selene-core')
-    testCompileOnly(project(':selene-common')) {
-        exclude group: "org.spongepowered", module: "configurate**"
+    parent.rootDir.listFiles().each {
+        if ((!ignoreProjects.contains(it.name)) && it.directory && new File(it, 'build.gradle').exists()) {
+            includeShadow project(":${it.name}")
+        }
     }
-    testCompileOnly project(':modules')
-    testCompileOnly(project(':selene-nms-1.12')) {
-        exclude group: 'net.minecraftforge', module: 'forge'
-    }
+
+    compileOnly "org.spongepowered:spongeapi:$spongeApi8Version"
 }
 
 shadowJar {
@@ -96,5 +93,4 @@ task copyArtifacts {
     }
 }
 
-jar.finalizedBy('reobfJar')
 build.finalizedBy copyArtifacts
