Keep parameter names during test compilation

--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,11 @@ allprojects {
             options.encoding = 'UTF-8'
         }
 
-        compileTestJava.options.encoding = 'UTF-8'
+        compileTestJava {
+            options.compilerArgs << '-parameters'
+            options.encoding = 'UTF-8'
+        }
+
         javadoc.options.encoding = 'UTF-8'
 
         dependencies {
